Image croppie: resolve pain points when working from mobile. Make resizer holders larger. Make viewport frame be within image container on smaller screens. Make image container larger

--- a/scss/layout/_max1023.scss
+++ b/scss/layout/_max1023.scss
@@ -251,6 +251,13 @@
 			padding: 0 15px;
 			margin-bottom: 10px;
 		}
+		&__label {
+			height: 341px;
+		}
+		&__photo {
+			width: 80%;
+			left: 10%;
+		}
 	}
 
 	.select-sub-title {
